--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/text"
         android:layout_width="250dp"
-        android:layout_height="125dp"
+        android:layout_height="100dp"
         android:layout_marginLeft="16dp"
         android:scrollbars="horizontal"
         android:text=""
@@ -22,11 +22,23 @@
         android:layout_width="250dp"
         android:layout_height="125dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="125dp"
         android:scrollbars="horizontal"
         android:text="0"
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/copyButton"
+        android:layout_width="250dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="275dp"
+        android:onClick="copy"
+        android:text="copy"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
