--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,9 @@
     <TextView
         android:id="@+id/answer"
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="100dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="125dp"
         android:scrollbars="horizontal"
         android:text="0"
         android:textSize="30sp"
@@ -21,12 +21,24 @@
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="100dp"
         android:layout_marginLeft="16dp"
         android:scrollbars="horizontal"
         android:text=""
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/copyButton"
+        android:layout_width="141dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="240dp"
+        android:text="copy"
+        android:onClick="copy"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
@@ -148,6 +160,7 @@
                 android:onClick="eval"
                 android:tag="5"
                 android:text="5" />
+
             <Button
                 android:id="@+id/button7"
                 android:layout_width="wrap_content"
