--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,9 +34,9 @@
         android:layout_width="141dp"
         android:layout_height="44dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="240dp"
-        android:text="copy"
+        android:layout_marginTop="256dp"
         android:onClick="copy"
+        android:text="copy"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -55,7 +55,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="100">
+            android:layout_weight="100"
+            android:gravity="bottom">
 
             <Button
                 android:id="@+id/button12"
@@ -98,7 +99,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="100">
+            android:layout_weight="100"
+            android:gravity="bottom">
 
             <Button
                 android:id="@+id/button1"
@@ -141,7 +143,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="100">
+            android:layout_weight="100"
+            android:gravity="bottom">
 
             <Button
                 android:id="@+id/button5"
@@ -184,7 +187,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="100">
+            android:layout_weight="100"
+            android:gravity="bottom">
 
             <Button
                 android:id="@+id/button9"
@@ -227,7 +231,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="100">
+            android:layout_weight="100"
+            android:gravity="bottom">
 
             <Button
                 android:id="@+id/button13"
