--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -46,7 +46,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="right"
         android:layout_marginLeft="300dp"
-        android:layout_marginTop="10dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -61,7 +60,7 @@
             <Button
                 android:id="@+id/button12"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="backspace"
                 android:tag="backspace"
@@ -70,7 +69,7 @@
             <Button
                 android:id="@+id/button18"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="clear"
                 android:tag="c"
@@ -79,7 +78,7 @@
             <Button
                 android:id="@+id/button17"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="."
@@ -88,7 +87,7 @@
             <Button
                 android:id="@+id/button4"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="*"
@@ -104,7 +103,7 @@
             <Button
                 android:id="@+id/button1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="1"
@@ -113,7 +112,7 @@
             <Button
                 android:id="@+id/button2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="2"
@@ -122,7 +121,7 @@
             <Button
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="3"
@@ -131,7 +130,7 @@
             <Button
                 android:id="@+id/button8"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="/"
@@ -147,7 +146,7 @@
             <Button
                 android:id="@+id/button5"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="4"
@@ -156,7 +155,7 @@
             <Button
                 android:id="@+id/button6"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="5"
@@ -165,7 +164,7 @@
             <Button
                 android:id="@+id/button7"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="6"
@@ -174,7 +173,7 @@
             <Button
                 android:id="@+id/button19"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="+"
@@ -190,7 +189,7 @@
             <Button
                 android:id="@+id/button9"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="7"
@@ -199,7 +198,7 @@
             <Button
                 android:id="@+id/button10"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="8"
@@ -208,7 +207,7 @@
             <Button
                 android:id="@+id/button11"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="9"
@@ -217,7 +216,7 @@
             <Button
                 android:id="@+id/button16"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="res"
                 android:tag="-"
@@ -233,7 +232,7 @@
             <Button
                 android:id="@+id/button13"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="("
@@ -242,7 +241,7 @@
             <Button
                 android:id="@+id/button14"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="0"
@@ -251,7 +250,7 @@
             <Button
                 android:id="@+id/button15"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag=")"
@@ -260,7 +259,7 @@
             <Button
                 android:id="@+id/button20"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="res"
                 android:tag="="
