--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:layout_width="141dp"
         android:layout_height="44dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="256dp"
+        android:layout_marginTop="240dp"
         android:onClick="copy"
         android:text="copy"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -61,7 +61,7 @@
             <Button
                 android:id="@+id/button12"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="backspace"
                 android:tag="backspace"
@@ -70,7 +70,7 @@
             <Button
                 android:id="@+id/button18"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="clear"
                 android:tag="c"
@@ -79,7 +79,7 @@
             <Button
                 android:id="@+id/button17"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="."
@@ -88,7 +88,7 @@
             <Button
                 android:id="@+id/button4"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="*"
@@ -105,7 +105,7 @@
             <Button
                 android:id="@+id/button1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="1"
@@ -114,7 +114,7 @@
             <Button
                 android:id="@+id/button2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="2"
@@ -123,7 +123,7 @@
             <Button
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="3"
@@ -132,7 +132,7 @@
             <Button
                 android:id="@+id/button8"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="/"
@@ -149,7 +149,7 @@
             <Button
                 android:id="@+id/button5"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="4"
@@ -158,7 +158,7 @@
             <Button
                 android:id="@+id/button6"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="5"
@@ -167,7 +167,7 @@
             <Button
                 android:id="@+id/button7"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="6"
@@ -176,7 +176,7 @@
             <Button
                 android:id="@+id/button19"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="+"
@@ -193,7 +193,7 @@
             <Button
                 android:id="@+id/button9"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="7"
@@ -202,7 +202,7 @@
             <Button
                 android:id="@+id/button10"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="8"
@@ -211,7 +211,7 @@
             <Button
                 android:id="@+id/button11"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="9"
@@ -220,7 +220,7 @@
             <Button
                 android:id="@+id/button16"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="res"
                 android:tag="-"
@@ -237,7 +237,7 @@
             <Button
                 android:id="@+id/button13"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="("
@@ -246,7 +246,7 @@
             <Button
                 android:id="@+id/button14"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag="0"
@@ -255,7 +255,7 @@
             <Button
                 android:id="@+id/button15"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="eval"
                 android:tag=")"
@@ -264,7 +264,7 @@
             <Button
                 android:id="@+id/button20"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="25"
                 android:onClick="res"
                 android:tag="="
